# fastapi-example

./: .env.template  .gitignore  11.py  3.py  augaben.txt  auth.py  docker-compose.yaml  example.py  login_view.py  main.py  main2.py  other.py  project_aufgaben.txt  pyproject.toml
app/: __init__.py  auth22.py
app/auth2/: access_token.py
app/posts/: __init__.py  models.py  schemas.py  views.py
app/users/: __init__.py  schemas.py  views.py  votes_view.py
app/utils/: psw_hashing.py
core/: config.py
core/models/: __init__.py  base.py  data.py
migrations/: env.py
migrations/versions/: 0f4f87c2722a_dsf.py  772862634e71_add_new_columns.py  8c17fc85eff1_create_votes.py  f22508219389_dfffs.py  f59b89674ea2_dd.py
